--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+server/config/dev.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
