--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
-    "multer": "^1.4.2"
+    "sha1": "^1.1.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.2"
   }
